# mcp-book-lover

./: .gitignore  README.md  pyproject.toml
src/mcp_book_lover/: convert.py  db.py  recommendations.py  search.py  server.py
