[project]
name = "mcp-book-lover"
version = "0.1.0"
description = "MCP server for book tracking, reviews, recommendations and format conversion"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "ebooklib>=0.18",
    "pypdf>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "fpdf2>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-book-lover = "mcp_book_lover.server:main"
