[project]
name = "mcp-book-lover"
version = "0.1.1"
description = "MCP server for personal book library — track reading, reviews, recommendations, multi-source search and format conversion"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "mit9", email = "siniidrozd@gmail.com" },
]
keywords = ["mcp", "books", "library", "reading", "epub", "fb2", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "ebooklib>=0.18",
    "pypdf>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "fpdf2>=2.7.0",
]

[project.urls]
Repository = "https://github.com/MIt9/mcp-book-lover"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-book-lover = "mcp_book_lover.server:main"
